[package]
name = "twiggy_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "offline", "chrono"] }
anyhow = "1.0.70"
rand = "0.8.5"
chrono = { version = "0.4.24", features = ["clock"] }
rand_seeder = "0.2.3"
image = "0.24.6"
lru = "0.12.0"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = "0.11.22"
serde_json = "1.0.108"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector"]
