[package]
name = "twiggy_bot"
version = "1.0.0"
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["clock"] }
image = "0.24.6"
lru = "0.12.0"
poise = "0.6"
rand = "0.8.5"
rand_seeder = "0.2.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "offline", "chrono"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "^0.12"
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "rustls_backend"]

[dev-dependencies]
mockall = "0.13.0"
insta = "1.41.1"